@@ -7,6 +7,8 @@
 	Fix xosd.spec.in: no LT_CURRENT, include man pages and pixmaps,
 	  License replaces Copyright
 	Install pixmaps only for new xmms plugin or bmp plugin
+	Update COPYING: the FSF has relocated
+	Licence change from GPL to LGPL for libxosd only
 
 2.2.14:
 	Timeout Bigfix Patch (P Hahn)
@@ -46,7 +48,6 @@
 	was being quiet, but it turns out that my email had magically
 	decided to stop forwarding and I wasn't getting any of his
 	emails. <insert rant about university IT departments here>.
-
 
 2.2.8:
 	investigated using indent. From now on I'll use these arguments to
